# hs-text-editor

./: LICENSE  README.md  hs-text-editor.cabal  stack.yaml
src/: Main.hs
src/Lib/Graphics/: Commands.hs  FileMenuOptions.hs  Notebook.hs  Utilities.hs  Views.hs
