name:                hs-text-editor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/arhamchopra/hs-text-editor#readme
license:             BSD3
license-file:        LICENSE
author:              Arham Chopra
maintainer:          arhamschopra@gmail.com
copyright:           2018 Arham Chopra
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hs-text-editor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       monad-control,
                       gtk2hs-buildtools,
                       gtk,
                       gio,
                       transformers,
                       glib,
                       hint,
                       split
